# WebService

./: .gitignore  LICENSE  README.md  docker-compose.yml
WebService/: Dockerfile
WebService/src/: pyproject.toml  requirements.txt
WebService/src/app/: main.py
WebService/src/app/alembic/: env.py
WebService/src/app/database/: database.py
WebService/src/app/database/serializers/: categories_serializer.py  questions_serializer.py
WebService/src/app/database/services/: categories_service.py  questions_service.py
src/: Dockerfile
src/src/: pyproject.toml  requirements.txt
src/src/alembic/: env.py
src/src/alembic/versions/: 6873c56d59dd_change_string_to_text_field.py
src/src/app/: routes.py
src/src/app/database/: models.py
src/src/app/database/serializers/: questions_serializer.py
src/src/app/database/services/: categories_service.py  questions_service.py
src/src/app/utils/: validator.py
src/web_service/: pyproject.toml
src/web_service/alembic/versions/: 3e5b7e7e0dc4_create_models.py  ef5b109d7527_fix_category_model.py
src/web_service/app/: main.py  routes.py
src/web_service/app/database/: container.py
src/web_service/app/database/serializers/: categories_serializer.py
src/web_service/app/database/services/: questions_service.py
src/web_service/app/utils/: formatter.py  json_parser.py
